# Renderer-Vulkan3D

./: .gitattributes  LICENSE
Frogman-Engine-Libraries/include/FE/core/: allocator.hxx  block_pool.hxx  block_pool_allocator.hxx  iterator.hxx  memory.hxx  pool.hxx  pool_allocator.hxx  smart_ptrs.h  string.hxx  string_view.hxx  tagged_object.hxx  types.hxx
Frogman-Engine-Libraries/include/FE/core/algorithm/: string.hxx  utility.hxx
Frogman-Engine-Libraries/include/FE/core/containers/: array.hxx
Frogman-Engine-Libraries/include/FE/core/containers/private/: array_base.hxx
Frogman-Engine-Libraries/include/FE/core/log/: logger.hpp  macros.h
Frogman-Engine-Libraries/include/FE/core/log/private/: format_string.cpp  logger.cpp
Frogman-Engine-Libraries/include/FE/core/private/: allocator_base.hpp  debug.h
Frogman-Engine-Libraries/include/FE/core/smart_pointers/: exclusive_ptr.hxx  owner_ptr.hxx  proxy_ptr.hxx  safe_ptr.hxx  unique_ptr.hxx
Frogman-Engine-Libraries/include/FE/core/smart_pointers/private/: ref_table.hxx  smart_ptr_variants_base.hpp
Frogman-Engine-Libraries/include/FE/framework/: framework.hpp
Frogman-Engine-Libraries/include/FE/framework/private/: framework.cpp
Frogman-Engine-Libraries/lib/FE_CORE_AVX/: CMakeLists.txt
Frogman-Engine-Libraries/lib/FE_CORE_AVX/Windows/debug/lib/: FE_CORE_AVX.lib
Frogman-Engine-Libraries/lib/FE_CORE_FRAMEWORK/: CMakeLists.txt
Source/CMakeLists/: CMakeLists.txt  Configure-Projects.bat
Source/CMakeLists/FE_RENDERER/: CMakeLists.txt
Source/CMakeLists/FE_RENDERER_TEST/: CMakeLists.txt  main.cpp
Source/FE/renderer/: device.hpp  pipeline.hpp  settings.h  swap_chain.hpp  window.hpp
Source/FE/renderer/private/: device.cpp  pipeline.cpp  swap_chain.cpp  window.cpp
Source/shaders/: sample_shader.frag  sample_shader.vert
Third-Party-Libraries/FidelityFX-SDK-FSR3-v3.0.4/: .gitignore
Third-Party-Libraries/glfw-3.4.bin.WIN64/include/GLFW/: glfw3.h
Third-Party-Libraries/glm-1.0.1/lib/VS2022-v143/Debug/: glm.lib
Third-Party-Libraries/glm-1.0.1/lib/VS2022-v143/MinSizeRel/: glm.lib
Third-Party-Libraries/glm-1.0.1/lib/VS2022-v143/RelWithDebInfo/: glm.lib
Third-Party-Libraries/glm-1.0.1/lib/VS2022-v143/Release/: glm.lib
